...
                    android:layout_height="@dimen/sensor_alert_dialog_icon_size"
                    android:layout_marginEnd="@dimen/sensor_alert_dialog_icon_padding"
                    android:contentDescription="@string/sensor_accuracy_image_description"
                    android:src="@{ContextCompat.getDrawable(context, sensorAccuracy.iconResourceId)}"
                    android:tint="@android:color/tab_indicator_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sensor_accuracy_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sensor_accuracy_text"
                    android:layout_width="wrap_content"
...
